commit copy to branch items

--- a/SSHPROJECT/talend.project
+++ b/SSHPROJECT/talend.project
@@ -82,16 +82,27 @@
         <elementParameter xmi:id="_wzcoLDLaEeay2swbHwOQhg" field="TECHNICAL" name="PROPERTY_TYPE_IMPLICIT_CONTEXT:REPOSITORY_PROPERTY_TYPE" value="" contextMode="false"/>
       </parameters>
     </implicitContextSettings>
-    <ItemsRelations xmi:id="_hqPbwDNzEeatvrr04BUbWw">
-      <baseItem xmi:id="_hqPbwTNzEeatvrr04BUbWw" id="_k-agUDLFEeaiKMz9xNanVQ" version="0.1" type="job"/>
-      <relatedItems xmi:id="_hqPbwjNzEeatvrr04BUbWw" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_hqPbwzNzEeatvrr04BUbWw" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_hqPbxDNzEeatvrr04BUbWw" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_hqPbxTNzEeatvrr04BUbWw" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_hqPbxjNzEeatvrr04BUbWw" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_hqPbxzNzEeatvrr04BUbWw" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_hqPbyDNzEeatvrr04BUbWw" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_hqPbyTNzEeatvrr04BUbWw" id="Mathematical" version="Latest" type="routine"/>
+    <ItemsRelations xmi:id="_iyUeIDNzEeatvrr04BUbWw">
+      <baseItem xmi:id="_iyUeITNzEeatvrr04BUbWw" id="_k-agUDLFEeaiKMz9xNanVQ" version="0.1" type="job"/>
+      <relatedItems xmi:id="_iyUeIjNzEeatvrr04BUbWw" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeIzNzEeatvrr04BUbWw" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeJDNzEeatvrr04BUbWw" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeJTNzEeatvrr04BUbWw" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeJjNzEeatvrr04BUbWw" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeJzNzEeatvrr04BUbWw" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeKDNzEeatvrr04BUbWw" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeKTNzEeatvrr04BUbWw" id="Mathematical" version="Latest" type="routine"/>
+    </ItemsRelations>
+    <ItemsRelations xmi:id="_iyUeKjNzEeatvrr04BUbWw">
+      <baseItem xmi:id="_iyUeKzNzEeatvrr04BUbWw" id="_umkLsDLYEeaZH5-RUyZcGQ" version="0.1" type="job"/>
+      <relatedItems xmi:id="_iyUeLDNzEeatvrr04BUbWw" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeLTNzEeatvrr04BUbWw" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeLjNzEeatvrr04BUbWw" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeLzNzEeatvrr04BUbWw" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeMDNzEeatvrr04BUbWw" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeMTNzEeatvrr04BUbWw" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeMjNzEeatvrr04BUbWw" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_iyUeMzNzEeatvrr04BUbWw" id="Mathematical" version="Latest" type="routine"/>
     </ItemsRelations>
     <migrationTask xmi:id="_SQm9YDLFEeaiKMz9xNanVQ" id="org.talend.repository.localprovider.RemoveRoutineFolderTask" breaks="5.1.1" version="5.1.2" status="noimpact"/>
     <migrationTask xmi:id="_SQm9YTLFEeaiKMz9xNanVQ" id="org.talend.repository.localprovider.model.migration.ChangeXmiSerialization" breaks="5.1.1" version="5.1.2" status="noimpact"/>
