..   Importing items...     Delete items...       Delete (physical) process item 'q1' at path '' in project 'sshProject'         Save project 'sshProject'

--- a/SSHPROJECT/talend.project
+++ b/SSHPROJECT/talend.project
@@ -82,39 +82,27 @@
         <elementParameter xmi:id="_wzcoLDLaEeay2swbHwOQhg" field="TECHNICAL" name="PROPERTY_TYPE_IMPLICIT_CONTEXT:REPOSITORY_PROPERTY_TYPE" value="" contextMode="false"/>
       </parameters>
     </implicitContextSettings>
-    <ItemsRelations xmi:id="_rlS6MDN0Eeatvrr04BUbWw">
-      <baseItem xmi:id="_rlS6MTN0Eeatvrr04BUbWw" id="_k-agUDLFEeaiKMz9xNanVQ" version="0.1" type="job"/>
-      <relatedItems xmi:id="_rlS6MjN0Eeatvrr04BUbWw" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlS6MzN0Eeatvrr04BUbWw" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThQDN0Eeatvrr04BUbWw" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThQTN0Eeatvrr04BUbWw" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThQjN0Eeatvrr04BUbWw" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThQzN0Eeatvrr04BUbWw" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThRDN0Eeatvrr04BUbWw" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThRTN0Eeatvrr04BUbWw" id="Mathematical" version="Latest" type="routine"/>
+    <ItemsRelations xmi:id="_49fDUDN0Eeatvrr04BUbWw">
+      <baseItem xmi:id="_49fDUTN0Eeatvrr04BUbWw" id="_k-agUDLFEeaiKMz9xNanVQ" version="0.1" type="job"/>
+      <relatedItems xmi:id="_49fDUjN0Eeatvrr04BUbWw" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fDUzN0Eeatvrr04BUbWw" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fDVDN0Eeatvrr04BUbWw" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fDVTN0Eeatvrr04BUbWw" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fDVjN0Eeatvrr04BUbWw" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fDVzN0Eeatvrr04BUbWw" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fDWDN0Eeatvrr04BUbWw" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fDWTN0Eeatvrr04BUbWw" id="Mathematical" version="Latest" type="routine"/>
     </ItemsRelations>
-    <ItemsRelations xmi:id="_rlThRjN0Eeatvrr04BUbWw">
-      <baseItem xmi:id="_rlThRzN0Eeatvrr04BUbWw" id="_O7aIoDN0Eeatvrr04BUbWw" version="0.1" type="job"/>
-      <relatedItems xmi:id="_rlThSDN0Eeatvrr04BUbWw" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThSTN0Eeatvrr04BUbWw" id="eqweqwe" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThSjN0Eeatvrr04BUbWw" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThSzN0Eeatvrr04BUbWw" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThTDN0Eeatvrr04BUbWw" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThTTN0Eeatvrr04BUbWw" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThTjN0Eeatvrr04BUbWw" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThTzN0Eeatvrr04BUbWw" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlThUDN0Eeatvrr04BUbWw" id="Mathematical" version="Latest" type="routine"/>
-    </ItemsRelations>
-    <ItemsRelations xmi:id="_rlUIUDN0Eeatvrr04BUbWw">
-      <baseItem xmi:id="_rlUIUTN0Eeatvrr04BUbWw" id="_umkLsDLYEeaZH5-RUyZcGQ" version="0.1" type="job"/>
-      <relatedItems xmi:id="_rlUIUjN0Eeatvrr04BUbWw" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlUIUzN0Eeatvrr04BUbWw" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlUIVDN0Eeatvrr04BUbWw" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlUIVTN0Eeatvrr04BUbWw" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlUIVjN0Eeatvrr04BUbWw" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlUIVzN0Eeatvrr04BUbWw" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlUIWDN0Eeatvrr04BUbWw" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rlUIWTN0Eeatvrr04BUbWw" id="Mathematical" version="Latest" type="routine"/>
+    <ItemsRelations xmi:id="_49fqYDN0Eeatvrr04BUbWw">
+      <baseItem xmi:id="_49fqYTN0Eeatvrr04BUbWw" id="_umkLsDLYEeaZH5-RUyZcGQ" version="0.1" type="job"/>
+      <relatedItems xmi:id="_49fqYjN0Eeatvrr04BUbWw" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fqYzN0Eeatvrr04BUbWw" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fqZDN0Eeatvrr04BUbWw" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fqZTN0Eeatvrr04BUbWw" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fqZjN0Eeatvrr04BUbWw" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fqZzN0Eeatvrr04BUbWw" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fqaDN0Eeatvrr04BUbWw" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_49fqaTN0Eeatvrr04BUbWw" id="Mathematical" version="Latest" type="routine"/>
     </ItemsRelations>
     <migrationTask xmi:id="_SQm9YDLFEeaiKMz9xNanVQ" id="org.talend.repository.localprovider.RemoveRoutineFolderTask" breaks="5.1.1" version="5.1.2" status="noimpact"/>
     <migrationTask xmi:id="_SQm9YTLFEeaiKMz9xNanVQ" id="org.talend.repository.localprovider.model.migration.ChangeXmiSerialization" breaks="5.1.1" version="5.1.2" status="noimpact"/>
