..   Importing items...     Delete items...       Delete (physical) process item 'q1' at path '' in project 'sshProject'         Save project 'sshProject'

--- a/SSHPROJECT/talend.project
+++ b/SSHPROJECT/talend.project
@@ -82,51 +82,39 @@
         <elementParameter xmi:id="_wzcoLDLaEeay2swbHwOQhg" field="TECHNICAL" name="PROPERTY_TYPE_IMPLICIT_CONTEXT:REPOSITORY_PROPERTY_TYPE" value="" contextMode="false"/>
       </parameters>
     </implicitContextSettings>
-    <ItemsRelations xmi:id="_gG-x4DN2EeaHQqgvA76HvA">
-      <baseItem xmi:id="_gG-x4TN2EeaHQqgvA76HvA" id="_k-agUDLFEeaiKMz9xNanVQ" version="0.1" type="job"/>
-      <relatedItems xmi:id="_gG-x4jN2EeaHQqgvA76HvA" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x4zN2EeaHQqgvA76HvA" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x5DN2EeaHQqgvA76HvA" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x5TN2EeaHQqgvA76HvA" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x5jN2EeaHQqgvA76HvA" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x5zN2EeaHQqgvA76HvA" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x6DN2EeaHQqgvA76HvA" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x6TN2EeaHQqgvA76HvA" id="Mathematical" version="Latest" type="routine"/>
+    <ItemsRelations xmi:id="_UBy9MDOAEeaHQqgvA76HvA">
+      <baseItem xmi:id="_UBy9MTOAEeaHQqgvA76HvA" id="_k-agUDLFEeaiKMz9xNanVQ" version="0.1" type="job"/>
+      <relatedItems xmi:id="_UBy9MjOAEeaHQqgvA76HvA" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBy9MzOAEeaHQqgvA76HvA" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBy9NDOAEeaHQqgvA76HvA" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBy9NTOAEeaHQqgvA76HvA" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBy9NjOAEeaHQqgvA76HvA" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBy9NzOAEeaHQqgvA76HvA" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBy9ODOAEeaHQqgvA76HvA" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBy9OTOAEeaHQqgvA76HvA" id="Mathematical" version="Latest" type="routine"/>
     </ItemsRelations>
-    <ItemsRelations xmi:id="_gG-x6jN2EeaHQqgvA76HvA">
-      <baseItem xmi:id="_gG-x6zN2EeaHQqgvA76HvA" id="_O7aIoDN0Eeatvrr04BUbWw" version="0.1" type="job"/>
-      <relatedItems xmi:id="_gG-x7DN2EeaHQqgvA76HvA" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x7TN2EeaHQqgvA76HvA" id="eqweqwe" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x7jN2EeaHQqgvA76HvA" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x7zN2EeaHQqgvA76HvA" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x8DN2EeaHQqgvA76HvA" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x8TN2EeaHQqgvA76HvA" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x8jN2EeaHQqgvA76HvA" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x8zN2EeaHQqgvA76HvA" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x9DN2EeaHQqgvA76HvA" id="Mathematical" version="Latest" type="routine"/>
+    <ItemsRelations xmi:id="_UBy9OjOAEeaHQqgvA76HvA">
+      <baseItem xmi:id="_UBy9OzOAEeaHQqgvA76HvA" id="_umkLsDLYEeaZH5-RUyZcGQ" version="0.1" type="job"/>
+      <relatedItems xmi:id="_UBy9PDOAEeaHQqgvA76HvA" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBy9PTOAEeaHQqgvA76HvA" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBy9PjOAEeaHQqgvA76HvA" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBy9PzOAEeaHQqgvA76HvA" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkQDOAEeaHQqgvA76HvA" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkQTOAEeaHQqgvA76HvA" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkQjOAEeaHQqgvA76HvA" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkQzOAEeaHQqgvA76HvA" id="Mathematical" version="Latest" type="routine"/>
     </ItemsRelations>
-    <ItemsRelations xmi:id="_gG-x9TN2EeaHQqgvA76HvA">
-      <baseItem xmi:id="_gG-x9jN2EeaHQqgvA76HvA" id="_umkLsDLYEeaZH5-RUyZcGQ" version="0.1" type="job"/>
-      <relatedItems xmi:id="_gG-x9zN2EeaHQqgvA76HvA" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x-DN2EeaHQqgvA76HvA" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x-TN2EeaHQqgvA76HvA" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x-jN2EeaHQqgvA76HvA" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x-zN2EeaHQqgvA76HvA" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x_DN2EeaHQqgvA76HvA" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x_TN2EeaHQqgvA76HvA" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-x_jN2EeaHQqgvA76HvA" id="Mathematical" version="Latest" type="routine"/>
-    </ItemsRelations>
-    <ItemsRelations xmi:id="_gG-x_zN2EeaHQqgvA76HvA">
-      <baseItem xmi:id="_gG-yADN2EeaHQqgvA76HvA" id="_FfhyIDN2EeaHQqgvA76HvA" version="0.1" type="job"/>
-      <relatedItems xmi:id="_gG-yATN2EeaHQqgvA76HvA" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-yAjN2EeaHQqgvA76HvA" id="eqweqwe" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-yAzN2EeaHQqgvA76HvA" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-yBDN2EeaHQqgvA76HvA" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-yBTN2EeaHQqgvA76HvA" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-yBjN2EeaHQqgvA76HvA" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-yBzN2EeaHQqgvA76HvA" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-yCDN2EeaHQqgvA76HvA" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_gG-yCTN2EeaHQqgvA76HvA" id="Mathematical" version="Latest" type="routine"/>
+    <ItemsRelations xmi:id="_UBzkRDOAEeaHQqgvA76HvA">
+      <baseItem xmi:id="_UBzkRTOAEeaHQqgvA76HvA" id="_FfhyIDN2EeaHQqgvA76HvA" version="0.1" type="job"/>
+      <relatedItems xmi:id="_UBzkRjOAEeaHQqgvA76HvA" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkRzOAEeaHQqgvA76HvA" id="eqweqwe" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkSDOAEeaHQqgvA76HvA" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkSTOAEeaHQqgvA76HvA" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkSjOAEeaHQqgvA76HvA" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkSzOAEeaHQqgvA76HvA" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkTDOAEeaHQqgvA76HvA" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkTTOAEeaHQqgvA76HvA" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_UBzkTjOAEeaHQqgvA76HvA" id="Mathematical" version="Latest" type="routine"/>
     </ItemsRelations>
     <migrationTask xmi:id="_SQm9YDLFEeaiKMz9xNanVQ" id="org.talend.repository.localprovider.RemoveRoutineFolderTask" breaks="5.1.1" version="5.1.2" status="noimpact"/>
     <migrationTask xmi:id="_SQm9YTLFEeaiKMz9xNanVQ" id="org.talend.repository.localprovider.model.migration.ChangeXmiSerialization" breaks="5.1.1" version="5.1.2" status="noimpact"/>
